--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,35 @@
 body {
-    background-color: #FFF7F2;
+    background-color: #F3EEE8;
     font-family: 'Courier New', Courier, monospace;
     font-family: europa, sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
-.header {
-    font-weight: 700;
+img {
+    max-width: 35vw;
+    height: auto;
+}
+
+a{
+    color: #DA5135;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #EA9680;
+    text-decoration: #84fab0;
+}
+
+.heading {
+    font-weight: 600;
     font-size: 60px;
+    padding-bottom: 0.5em;
+}
+
+.subheading {
+    font-weight: 500;
+    font-size: 30px;
 }
 
 p {
@@ -42,4 +63,27 @@ p {
 .letter.in {
     transform: rotateX(0deg);
     transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.highlight {
+    font-size: 70px;
+    background-image: linear-gradient(120deg, #ffb88c 0%, #de6262 100%);
+    /*
+        curr: #ffb88c 0%, #de6262
+        sea: #84fab0 0%, #8fd3f4
+        candy: #ddd6f3 0%, #faaca8
+        roseanna: #ffc3a0 0%, #ffafbd
+    */
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+}
+
+.highlight:hover {
+    background-size: 100% 88%;
+}
+
+.faded {
+    opacity: 0.5;
 }
