--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@ body {
     font-family: europa, sans-serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0px;
 }
 
 img {
@@ -18,7 +19,6 @@ a{
 
 a:hover {
     color: #EA9680;
-    text-decoration: #84fab0;
 }
 
 .heading {
