--- a/style/grid.css
+++ b/style/grid.css
@@ -10,7 +10,8 @@
     height: 100vh;
 }
 
-.wrapper > div {
+.wrapper > div,
+.wrap > div {
     padding: 5em;
 }
 
@@ -22,11 +23,7 @@
     justify-items: center;
     align-items: center;
     padding: 0 3em;
-}
-
-.wrap > div {
-    background: #ddd;
-    padding: 5em;
+    /* height: 100vh; */
 }
 
 /* @media (max-width: 40em) {
