--- a/style/nav.css
+++ b/style/nav.css
@@ -3,43 +3,35 @@
     width: 100%;
     position: fixed;
     padding: 1.5em 0 0 0;
-    /* font-weight: 600; */
 }
 
 /* html {
     scroll-behavior: smooth;
 } */
 
-.nav > .nav-title {
+.nav > div {
     display: inline-block;
     font-size: 18px;
     padding: 0px 2em;
 }
 
-.nav > .nav-title > a {
-    color: black;
-}
-
-.nav > .nav-title > a:hover {
-    color: red;
-}
-
 .nav > .nav-links {
-    display: inline;
     float: right;
-    font-size: 18px;
-    padding: 0 1em 0 0;
 }
-  
-.nav > .nav-links > a {
-    display: inline-block;
-    padding: 0 1em;
-    text-decoration: none;
+
+.nav > div > a {
     color: black;
+    text-decoration: none;
+    margin: 0 1em;
+    background-image: linear-gradient(120deg, rgba(255,184,140,0.6) 0%, rgba(222,98,98,0.6) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0;
+    background-position: 0 88%;
+    transition: 0.25s ease-in-out;
 }
   
-.nav > .nav-links > a:hover {
-    color: red;
+.nav > div > a:hover {
+    background-size: 100% 88%;
 }
 
 /* @media (max-width: 40em) {
