--- a/style/accordion.css
+++ b/style/accordion.css
@@ -52,3 +52,18 @@
     grid-row-gap: 2em;
     grid-auto-rows: minmax(100px, auto);
 }
+
+.proj-grid-triple {
+    display: grid;
+    margin-top: 2em;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 1em;
+    grid-row-gap: 2em;
+    grid-auto-rows: minmax(100px, auto);
+    overflow: hidden;
+}
+
+.proj-grid-triple img {
+    max-width: calc(1/3 * 75vw - 1em);
+    height: auto;
+}
