--- a/style/grid.css
+++ b/style/grid.css
@@ -26,6 +26,53 @@
     /* height: 100vh; */
 }
 
-/* @media (max-width: 40em) {
+@media only screen and (max-width: 800px) {
+    .wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row-gap: 3em;
+    }
 
-} */
+    .wrapper > div,
+    .wrap > div {
+        padding: 0;
+        display: block;
+    }
+
+    #landing {
+        height: 100vh;
+        padding: 4em 0;
+    }
+
+    #landing > #title {
+        order: 2;
+        vertical-align: top;
+        padding: 0 0 10vh 0;
+    }
+
+    #landing > #graphic {
+        order: 1;
+    }
+
+    #photo > img {
+        max-width: 70vw;
+        display: none;
+    }
+
+    #about {
+        display: block;
+    }
+
+    #projects {
+        margin: 0 0 20vh 0;
+    }
+
+    #films > #playlist {
+        order: 2;
+    }
+
+    #films > #storytelling {
+        order: 1;
+        padding: 0 0 3em 0;
+    }
+}
