--- a/style/style.css
+++ b/style/style.css
@@ -95,3 +95,36 @@ p {
     font-size: 14px;
     margin: 1em;
 }
+
+@media only screen and (max-width: 800px) {
+
+    img {
+        max-width: 90vw;
+        max-height: 90vh;
+    }
+
+    .heading {
+        font-weight: 600;
+        font-size: 2em;
+        padding-bottom: 0.5em;
+    }
+    
+    .intro {
+        font-weight: 600;
+        font-size: 2em;
+        padding-bottom: 20px;
+    }
+    
+    .subheading {
+        font-weight: 500;
+        font-size: 0.70em;
+    }
+
+    .highlight {
+        font-size: 1.5em;
+    }
+
+    .footer {
+        margin: 10vh 0;
+    }
+}
