--- a/style/nav.css
+++ b/style/nav.css
@@ -34,6 +34,15 @@
     background-size: 100% 88%;
 }
 
+.nav.scrolled {
+    opacity: 0;
+    transition: all 1s ease;
+}
+
+.nav.scrolled:hover {
+    opacity: 1;
+}
+
 @media only screen and (max-width: 800px) {
     .nav {
         /* display: none; */
