--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,11 @@ p {
     margin: 0;
 }
 
+#photo img {
+    max-width: 25vw;
+    height: auto;
+}
+
 .fish {
     text-align: right;
     font-size: 1.2em;
